--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,5 @@
 <h1>投稿一覧</h1>
 <% @lists.each do |list| %> 
  <P>タイトル</P>
- <span><%= link_to list.title,"/lists/#{list.id}" %></span>
+ <span><%= link_to list.title, list_path(list.id) %></span>
 <% end %>
